ver1. Theem bang

--- a/Spare part.html
+++ b/Spare part.html
@@ -12,36 +12,38 @@
     <a href="./Theo dõi máy.html">Theo dõi máy</a>
     <h1>Danh sách spare part list Line DFAB</h1>
     <table>
-      <tr>
-        <th>STT</th>
-        <th>Tên chi tiết</th>
-        <th>Rev</th>
-        <th>Ngày xuất</th>
-        <th>Ngày nhập</th>
-        <th>Số lượng</th>
-      </tr>
-
-      <tr>
-        <td>1</td>
-        <td>Cut block in</td>
-        <td>A</td>
-        <td>20.Jun.2025</td>
-        <td></td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Cut block out</td>
-        <td>A</td>
-        <td>20.Jun.2025</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Cut block in</td>
-        <td>A</td>
-        <td></td>
-        <td>25.Jun.2025</td>
-      </tr>
+      <thead>
+        <tr>
+          <th>STT</th>
+          <th>Tên chi tiết</th>
+          <th>Rev</th>
+          <th>Ngày xuất</th>
+          <th>Ngày nhập</th>
+          <th>Số lượng</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Cut block out</td>
+          <td>A</td>
+          <td>20.Jun.2025</td>
+        </tr>
+        <tr><tr>
+          <td>1</td>
+          <td>Cut block in</td>
+          <td>A</td>
+          <td>20.Jun.2025</td>
+          <td></td>
+          <td>2</td>
+        </tr>
+          <td>1</td>
+          <td>Cut block in</td>
+          <td>A</td>
+          <td></td>
+          <td>25.Jun.2025</td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
