--- a/Spare part.html
+++ b/Spare part.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
-    <a href="./index.html"> Trang chủ</a>
-    <a href="./Tình hình Line.html"> Tình hình Line</a>
-    <a href="./Spare part.html">Spare part list</a>
-    <a href="./Theo dõi máy.html">Theo dõi máy</a>
-    <h1>Danh sách spare part list Line DFAB</h1>
+  <h1>Danh sách spare part list Line DFAB</h1>
+   <ul>
+      <li><a class="active" href="./index.html">Home</a></li>
+      <li><a href="./Tình hình Line.html">Tình hình Line</a></li>
+      <li><a href="./Spare part.html">Spare part</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
     <table>
       <thead>
         <tr>
