--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Quản Lí Line Auto</h1>
-    <a href="./index.html"> Trang chủ</a><br />
-    <a href="./Tình hình Line.html"> Tình hình Line</a><br />
-    <a href="./Spare part.html">Spare part list</a><br />
-    <a href="./Theo dõi máy.html">Theo dõi máy</a>
-    <hr />
+    <ul>
+      <li><a class="active" href="./index.html">Home</a></li>
+      <li><a href="./Tình hình Line.html">Tình hình Line</a></li>
+      <li><a href="./Spare part.html">Spare part</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
     <h5 style="color: rgb(255, 0, 25)">Design by Linh Trần</h5>
     <pre><h6>&copy; Copyright 2025</h6></pre>
   </body>
