--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <li><a class="active" href="./index.html">Home</a></li>
       <li><a href="./Tình hình Line.html">Tình hình Line</a></li>
       <li><a href="./Spare part.html">Spare part</a></li>
+      <li>
+        <a href="./Data phe pham/Data phe pham ver.0.html"
+          >Nhập dữ liệu phế phẩm</a
+        >
+      </li>
       <li><a href="#about">About</a></li>
     </ul>
     <h5 style="color: rgb(255, 0, 25)">Design by Linh Trần</h5>
