Thêm navigation cho trang Data phế phẩm

--- a/Data phe pham/Data phe pham ver.0.html
+++ b/Data phe pham/Data phe pham ver.0.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="../style.css" />
     <title>Nhập Dữ Liệu Phế Phẩm</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
@@ -60,11 +61,11 @@
   </head>
   <body>
     <div>
-      <pre>
-      <a class="active" href="../index.html">Home</a>
-      <a href="../Tình hình Line.html">Tình hình Line</a>
-      <a href="../Spare part.html">Spare part</a>
-      <a href="../About">About</a>
+      <ul>
+      <li><a class="active" href="../index.html">Home</a></li>
+      <li><a href="../Tình hình Line.html">Tình hình Line</a></li>
+      <li><a href="../Spare part.html">Spare part</a></li>
+      <li><a href="#about">About</a></li>
     </pre>
     </div>
     <h2>Nhập Dữ Liệu Phế Phẩm Line</h2>
