--- a/Tình hình Line.html
+++ b/Tình hình Line.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Tình Hình Line</title>
   </head>
   <body>
     <h1>Quản Lí Line Auto</h1>
-    <a href="./index.html"> Trang chủ</a><br />
-    <a href="./Tình hình Line.html"> Tình hình Line</a><br />
-    <a href="./Spare part.html">Spare part list</a><br />
-    <a href="./Theo dõi máy.html">Theo dõi máy</a>
+    <ul>
+      <li><a class="active" href="./index.html">Home</a></li>
+      <li><a href="./Tình hình Line.html">Tình hình Line</a></li>
+      <li><a href="./Spare part.html">Spare part</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
   </body>
 </html>
