--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <li><a href="./Tình hình Line.html">Tình hình Line</a></li>
       <li><a href="./Spare part.html">Spare part</a></li>
       <li>
-        <a href="./Data phe pham/Data phe pham ver.0.html"
-          >Nhập dữ liệu phế phẩm</a
-        >
+        <a href="./Data phe pham/Data phe pham ver.0.html">Data phế phẩm</a>
       </li>
       <li><a href="#about">About</a></li>
     </ul>
