Thêm trang giới thiệu về tôi

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>
         <a href="./Data phe pham/Data phe pham ver.0.html">Data phế phẩm</a>
       </li>
-      <li><a href="#about">About</a></li>
+      <li><a href="About.html">About</a></li>
     </ul>
     <h5 style="color: rgb(255, 0, 25)">Design by Linh Trần</h5>
     <pre><h6>&copy; Copyright 2025</h6></pre>
