Them home trang about

--- a/About.html
+++ b/About.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 text-gray-800 font-sans">
+    <Ul><a href="./index.html">Home</a></Ul>
     <div class="min-h-screen flex flex-col items-center justify-center p-6">
       <div
         class="bg-white rounded-2xl shadow-lg max-w-3xl w-full p-8 space-y-6"
